fix alignment of announcement in dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
 
 
 .announce{
-    height: 45rem;
+    height: 30rem;
 }
